<resources>
    <string name="title_activity_trophy" translatable="false">Activity_trophy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Suivant</string>
    <string name="previous">Précédent</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="parametre_balance">Paramètres de la balance</string>
    <string name="wifi" translatable="false">WiFi</string>
    <string name="nom_wifi">Nom du WIFI</string>
    <string name="name" translatable="false">Weightless</string>
    <string name="privacy_policy">Paramètre de confidentialité</string>
    <string name="Terms_of_use">Conditions d"'"utilisation</string>
    <string name="account">Mon compte</string>
    <string name="identifiant">Identifiant</string>
    <string name="creation">Création de Compte</string>
    <string name="Langue">Langue</string>
    <string name="Aide">Aide</string>
    <string name="Themes">Thèmes</string>
    <string name="img_description_logo_weightless">Image weigthless</string>
    <string name="img_description_weight">Image poids</string>
    <string name="img_description_fleche">Image Fleche verte écran accueil</string>
    <string name="a11">Fleche verte</string>

    <!-->Généraux<-->
    <string name="gen_name">Nom</string>
    <string name="gen_phone">Téléphone</string>
    <string name="gen_edit">Editer</string>
    <string name="gen_connexion">Connexion</string>
    <string name="gen_mail">Mail</string>
    <string name="gen_password">Mot de passe</string>

    <!-->Bandeau de sélection de pages<-->
    <string name="weight">Poids</string>
    <string name="results">Résultats</string>
    <string name="settings">Paramètres</string>
    <string name="profil">Mon profil</string>
    <string name="img_description_settings">Image paramètres</string>
    <string name="img_description_connexion">Image Connexion</string>

    <!-->Page Connexion<-->
    <string name="con_creerCompte">Créer mon compte</string>
    <string name="con_essaisrestants">Nombres d"'"essais restants = 5</string>
    <string name="con_mdpoublié">Mot de passe oublié</string>

    <!-->Page trophés<-->
    <string name="badges">Mes badges</string>
    <string name="load_badges">Charger mes badges</string>
    <string name="badges_unlock">Pas débloqué</string>
    <string name="badges_1">Créé ton compte</string>
    <string name="badges_2">Crée ta 5 ème poubelle</string>
    <string name="badges_3">Crée ta 20 ème poubelle</string>
    <string name="badges_4">Crée ta 50 ème poubelle</string>
    <string name="badges_5">Crée ta 100 ème poubelle</string>
    <string name="badges_next_infos">Plus de trophés à venir ! ;)</string>
    <string name="badges_6">Donne nous ton avis</string>
    <string name="badges_7">Regardes ton historique</string>
    <string name="badges_8">Changes de pseudo</string>

    <!-->Page Mon profil<-->
    <string name="profile_name">Nom : </string>
    <string name="profile_mail">Mail : </string>
    <string name="profile_phone">Téléphone : </string>
    <string name="profile_nb_pb">Nombre de poubelles : </string>
    <string name="profile_update">Mettre à jour</string>
    <string name="profile_go_badges">Accéder à mes badges</string>

    <!-->Page Aide<-->
    <string name="help_activity">Ceci est l"'"activité aide</string>

    <!-->Page Contact WL<-->
    <string name="contact_desc">Nous contacter</string>
    <string name="contact_opinion">Tapez ici votre avis</string>
    <string name="contact_send">Envoyer</string>

    <!-->Page Accueil<-->
    <string name="home_welcome">Bienvenue sur l"'"application Weightless</string>
    <string name="home_desc">Sur cette application, vous n"'"avez plus à vous préoccuper de la tarification incitative. Weightless vous permet de calculer le coût de vos déchets afin de mieux gérer votre budget.</string>
    <string name="home_GO" translatable="false">GO</string>

    <!-->Page Changement de langue<-->
    <string name="langues_desc">Notre application est disponible en 3 langues pour le moment (Francais, Anglais et Espagnol), mais de nouvelles seront bientôt disponibles ! Pour changer de langue, allez dans les paramètres de votre téléphone et choisissez la langue que vous voulez !"</string>

    <!-->Page Themes<-->
    <string name="themes_activity">Ceci est l"'"activité thèmes</string>

    <!-->Page Poids<-->
    <string name="poids_desc">Poids</string>
    <string name="update_password">Mot de passe</string>
    <string name="update_password_edit">Editer mon mot de passe</string>

    <!-->Page Résultats<-->
    <string name="res_5res">Charger mes 5 derniers résultats</string>
    <string name="res_graph">Charger mon graphique</string>
    <string name="res_prix">Prix total à payer : ???</string>
    <string name="res_desc">Ici, vous retrouverez vos resultats conecernant vos poubelles comme par exemple la date, le poids de vos pesées mais aussi la moyenne de vos 5 dernières pesées (A MODIFIER ) </string>

</resources>